Correct contrast error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,7 +88,7 @@ main {
 }
 
 #tools .separator {
-    opacity: 0.6;
+    opacity: 0.8;
 }
 
 #tools a {
